# Copyright (c) 2022 solarliner
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

[package]
name = "ferret-cas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
fxhash = "0.2.1"
miette = "5.1.0"
serde = "1.0.137"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["fs", "io-util"] }
tracing = "0.1.35"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["fs", "io-util", "rt"] }
