# Copyright (c) 2022 solarliner
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

[package]
name = "ferret-filemap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["fs", "io-util", "macros", "rt"] }
thiserror = "1.0.31"
bincode = "1.3.3"
fxhash = "0.2.1"
